<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".soiltesting">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#EFDF53">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Soil Testing"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/back"
                android:src="@drawable/back"

                />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:src="@drawable/soillogo"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/trailpackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:padding="20dp"
            android:layout_gravity="center">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="228dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Trial Pacakge"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


                <TextView
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trailpackage"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/basicpackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="220dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Basic Pacakge"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="@string/basic"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/standardpackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:padding="20dp"

            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="185dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Standard Pacakge"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="@string/standard"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                   android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/premiumpackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:padding="20dp"

            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="185dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Premium Pacakge"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="@string/premium"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>
