<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".aphids">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#EFDF53">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Peanut Rust"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/back1"
                android:src="@drawable/back"

                />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="410dp"
            android:layout_height="248dp"
            android:src="@drawable/peanutrustlogo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="expand"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Symptoms"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptoms"
                    android:id="@+id/details"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="expand"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/soil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Organic Control"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organiccon"
                    android:id="@+id/soilinfo"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="expand"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/fertilizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chemical Control"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chemicalcon"
                    android:id="@+id/fertidetail"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>
